[package]
name = "gpdwn"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[dependencies]
env_logger = "0.11.3"
gumdrop = "0.8.1"
log = "0.4.21"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
url = "2.5.0"
